gccida/g0/insert_regs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/insert_regs/src/cse.c:1762:2: error: expected expression
 struct cse_reg_info = cached_cse_reg_info; 
 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/insert_regs/src/cse.c:1764:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( regno); 
 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/insert_regs/src/cse.c:1811:24: error: use of undeclared identifier 'machine_mode'
make_new_qty( regno, ( machine_mode)*( ( unsigned __int8 *)x + 2)); 
                       ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/insert_regs/src/obj/cse.o] Error 1
